# planex

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  desktop.py  docker-compose.yml  main.py  pyproject.toml
cli/: app.py
core/: agent.py  config.py  context.py  executor.py  knowledge.py  llm.py  llm_bedrock.py  memory.py  models.py  onboarding.py  planner.py  react_loop.py  state.py
dashboard/: app.py
examples/: transcript_research.md
examples/sample_docs/: ai_trends_2025.md  legal_tech_overview.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  SetupModal.tsx  StatusBar.tsx
frontend/src/components/Knowledge/: KBView.tsx
frontend/src/components/Memory/: MemoryView.tsx
frontend/src/components/Research/: ClarificationCards.tsx  DocumentPanel.tsx  LogViewer.tsx  PlanView.tsx  ResearchView.tsx  Synthesis.tsx
frontend/src/components/Sidebar/: QuickStats.tsx  SessionList.tsx
frontend/src/components/common/: CardRenderer.tsx  ChartRenderer.tsx  ChoiceCards.tsx  CopyButton.tsx  Markdown.tsx  MermaidDiagram.tsx  StatusIcon.tsx  Toast.tsx
frontend/src/stores/: appStore.ts
frontend/src/types/: index.ts
tests/: conftest.py  test_agui_events.py  test_models.py  test_state.py  test_tools.py
tools/: base.py  ddg_search.py  file_ops.py  ingest.py  knowledge_search.py  local_search.py  read_url.py  time_tool.py  web_search.py
