[project]
name = "planex"
version = "0.1.0"
description = "AI Research Assistant with persistent knowledge base — plan, execute, learn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "lancedb>=0.17",
    "tantivy>=0.22",
    "trafilatura>=2.0",
    "pymupdf>=1.25",
    "tiktoken>=0.8",
    "rich>=13.9",
    # tavily-python removed — using OpenAI native web search instead
    "python-dotenv>=1.0",
    "click>=8.1",
    "pyarrow>=18.0",
    "ag-ui-protocol>=0.1",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.115", "uvicorn>=0.32", "websockets>=12.0", "python-multipart>=0.0.20"]
desktop = ["pywebview>=5.0"]
bedrock = ["anthropic>=0.90", "aioboto3>=12.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
planex = "cli.app:main"

[tool.setuptools.packages.find]
include = ["core*", "tools*", "cli*", "dashboard*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
